--- a/index.html
+++ b/index.html
@@ -1105,7 +1105,9 @@
                 <a target="_blank" rel="nofollow" href="https://github.com/MustafaAhmed22">
                   <i aria-hidden="true" class="fab fa-github"></i>
                 </a>
-
+                <a target="_blank" rel="nofollow" href="https://www.linkedin.com/in/mostafa-ahmed-82997aa5/https://www.linkedin.com/in/mostafa-ahmed-82997aa5/">
+                  <i aria-hidden="true" class="fab fa-linkedin"></i>
+                </a>
               </div>
 
             </div>
