--- a/index.html
+++ b/index.html
@@ -1009,17 +1009,22 @@
           </div>
 
           <div class="row clients-items">
-            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 align-center">
-              <div class="clients-item"><img src="assets/images/brand1.png" alt="" /></div>
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-2 align-center">
+              <div class="clients-item"><img src="assets/images/5.png" alt="" /></div>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 align-center">
-              <div class="clients-item"><img src="assets/images/brand2.png" alt="" /></div>
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-2 align-center">
+              <div class="clients-item"><img src="assets/images/6.jpeg" alt="" /></div>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 align-center">
-              <div class="clients-item"><img src="assets/images/brand3.png" alt="" /></div>
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-2 align-center">
+              <div class="clients-item"><img src="assets/images/2.png" alt="" /></div>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 align-center">
-              <div class="clients-item"><img src="assets/images/brand4.png" alt="" /></div>
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-2 align-center">
+              <div class="clients-item"><img src="assets/images/3.png" alt="" /></div>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-2 align-center  ">
+              <div class="clients-item "><img src="assets/images/4.png" alt="" /></div>
+            </div>
+              
             </div>
           </div>
 
